# fx_lab_01

./: .gitignore  AGENTS.md  Makefile  PLANS.md  README.md  REPO_STRUCTURE.md  TASKS.md  TASKS_EXECUTION_ORDER.md  main.py  pyproject.toml
configs/app/: bootstrap.yaml
configs/experiments/: vertical_slice_demo.yaml
configs/strategies/: vertical_slice_strategy.yaml
configs/validation/: standard_walkforward.yaml
docs/: architecture.md  troubleshooting.md
src/fxlab/: __init__.py  constants.py  exceptions.py  logging.py  paths.py
tests/fixtures/: __init__.py  canonical_fixtures.py
tests/integration/: test_fixture_normalization_flow.py  test_multi_pair_vertical_slice.py  test_vertical_slice_pipeline.py
tests/regression/: test_lookahead_regression.py  test_same_bar_fill_regression.py  test_selection_leakage_regression.py
tests/unit/: test_atr_feature.py  test_canonical_bar.py  test_canonical_normalization.py  test_combination_generator.py  test_config_loader.py  test_config_schemas.py  test_dataset_fingerprint.py  test_dataset_quality.py  test_default_feature_registry.py  test_domain_enums.py  test_dukascopy_mapping.py  test_dukascopy_provider_download.py  test_ema_feature.py  test_example_configs.py  test_execution_costs.py  test_execution_engine.py  test_execution_tie_break.py  test_experiment_leaderboard.py  test_feature_alignment.py  test_feature_registry.py  test_feature_runner.py  test_fixture_builders.py  test_hashing.py  test_import_smoke.py  test_logging.py  test_manifests.py  test_metrics_equity.py  test_metrics_grouped.py  test_metrics_trades.py  (+24 more)
(+165 files in other folders)
